--- a/.gitignore
+++ b/.gitignore
@@ -513,3 +513,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode,openframeworks+visualstudio,visualstudio
+
+*/.vscode/*
+*.vcxproj*
